Fix C++ support, implement Vita gamepad and touch

--- a/src/Makefile
+++ b/src/Makefile
@@ -58,7 +58,7 @@ RAYLIB_RELEASE_PATH  ?= $(RAYLIB_SRC_PATH)
 RAYLIB_LIBTYPE       ?= STATIC
 
 # Build mode for library: DEBUG or RELEASE
-RAYLIB_BUILD_MODE    ?= RELEASE
+RAYLIB_BUILD_MODE    ?= DEBUG
 
 # Build output name for the library
 RAYLIB_LIB_NAME      ?= raylib
@@ -67,7 +67,7 @@ RAYLIB_LIB_NAME      ?= raylib
 RAYLIB_RES_FILE      ?= ./raylib.dll.rc.data
 
 # Define raylib platform
-# Options:  PLATFORM_DESKTOP, PLATFORM_RPI, PLATFORM_ANDROID, PLATFORM_WEB
+# Options:  PLATFORM_DESKTOP, PLATFORM_RPI, PLATFORM_ANDROID, PLATFORM_WEB, PLATFORM_VITA
 PLATFORM             ?= PLATFORM_VITA
 
 # Include raylib modules on compilation
@@ -283,7 +283,7 @@ endif
 #  -D_DEFAULT_SOURCE        use with -std=c99 on Linux and PLATFORM_WEB, required for timespec
 #  -Werror=pointer-arith    catch unportable code that does direct arithmetic on void pointers
 #  -fno-strict-aliasing     jar_xm.h does shady stuff (breaks strict aliasing)
-CFLAGS += -Wall -D_DEFAULT_SOURCE -Wno-missing-braces -Werror=pointer-arith -fno-strict-aliasing
+CFLAGS += -Wall -D_DEFAULT_SOURCE -Wno-missing-braces -Werror=pointer-arith -fno-strict-aliasing -g
 
 ifeq ($(PLATFORM), PLATFORM_WEB)
     CFLAGS += -std=gnu99
@@ -386,7 +386,7 @@ endif
 # NOTE: Several external required libraries (stb and others)
 INCLUDE_PATHS = -I. -Iexternal/glfw/include -Iexternal/glfw/deps/mingw
 ifeq ($(PLATFORM),PLATFORM_VITA)
-    CFLAGS = -Wl,-q -Wall -Wno-incompatible-pointer-types -Wno-pointer-sign -O3 -nostartfiles -DVITA
+    CFLAGS = -Wl,-q -Wall -Wno-incompatible-pointer-types -Wno-pointer-sign -O3 -nostartfiles -DVITA -g
     INCLUDE_PATHS = -I.
 endif
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
